--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,17 +21,14 @@
     "sourceType": "module"
   },
   "rules": {
-    "indent": ["error", 2, { "SwitchCase": 1 }],
-    "linebreak-style": ["error", "unix"],
-    "no-trailing-spaces": 2,
     "eol-last": 2,
-    "space-in-parens": ["error", "never"],
     "no-multiple-empty-lines": 1,
     "prefer-const": "error",
     "space-infix-ops": "error",
     "no-useless-escape": "off",
     "no-var": "error",
     "no-console": 0,
+    "no-unused-vars": 0,
     "no-prototype-builtins": "off",
     "require-atomic-updates": "off",
     "jsdoc/require-jsdoc": 0,
