--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,7 @@
 {
   "root": true,
   "extends": [
-    "eslint:recommended",
-    "plugin:jsdoc/recommended"
+    "eslint:recommended", "airbnb-base", "prettier"
   ],
   "env": {
     "node": true,
@@ -13,54 +12,73 @@
     "wx": true 
   },
   "plugins": [
-    "flowtype",
-    "jsdoc"
+    "flowtype"
   ],
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
   },
   "rules": {
-    "eol-last": 2,
-    "no-multiple-empty-lines": 1,
-    "prefer-const": "error",
-    "space-infix-ops": "error",
-    "no-useless-escape": "off",
-    "no-var": "error",
+    "array-callback-return":0,
+    "arrow-body-style":0,
+    "camelcase": 0,
+    "class-methods-use-this": 0,
+    "consistent-return":0,
+    "default-case": 0,
+    "dot-notation": 0,
+    "eqeqeq":0,
+    "func-names": 0,
+    "global-require": 0,
+    "guard-for-in": 0,
+    "import/extensions": 0,
+    "import/first": 0,
+    "import/newline-after-import": 0,
+    "import/no-cycle": 0,
+    "import/no-dynamic-require": 0,
+    "import/no-extraneous-dependencies": 0,
+    "import/no-unresolved": 0,
+    "import/order": 0,
+    "import/prefer-default-export": 0,
+    "lines-between-class-members": 0,
+    "max-classes-per-file": 0,
+    "new-cap": 0,
+    "no-await-in-loop": 0,
+    "no-bitwise": 0,
     "no-console": 0,
+    "no-continue": 0,
+    "no-else-return": 0,
+    "no-extra-bind": 0,
+    "no-lonely-if": 0,
+    "no-loop-func": 0,
+    "no-multi-assign": 0,
+    "no-new": 0,
+    "no-param-reassign": 0,
+    "no-plusplus": 0,
+    "no-prototype-builtins": 0,
+    "no-restricted-globals": 0,
+    "no-restricted-properties": 0,
+    "no-restricted-syntax": 0,
+    "no-return-assign": 0,
+    "no-return-await": 0,
+    "no-shadow": 0,
+    "no-throw-literal": 0,
+    "no-underscore-dangle": 0,
+    "no-unneeded-ternary":0,
     "no-unused-vars": 0,
-    "no-prototype-builtins": "off",
-    "require-atomic-updates": "off",
-    "jsdoc/require-jsdoc": 0,
-    "jsdoc/require-returns-description": 0,
-    "jsdoc/require-param-description": 0,
-    "jsdoc/require-property-description": 0,
-    "jsdoc/require-param-type": 0,
-    "jsdoc/check-param-names": [
-      "error",
-      {
-        "allowExtraTrailingParamDocs": true
-      }
-    ],
-    "jsdoc/check-tag-names": [
-      "error",
-      {
-        "definedTags": [
-          "flow",
-          "flow-weak"
-        ]
-      }
-    ],
-    "jsdoc/no-undefined-types": [
-      "error",
-      {
-        "definedTypes": [
-          "AuthProvider",
-          "AsyncStorage",
-          "LocalDatastoreController",
-          "Parse"
-        ]
-      }
-    ]
+    "no-use-before-define": 0,
+    "no-useless-concat": 0,
+    "no-useless-constructor": 0,
+    "no-useless-escape": 0,
+    "object-shorthand": 0,
+    "prefer-arrow-callback": 0,
+    "prefer-destructuring": 0,
+    "prefer-object-spread": 0,
+    "prefer-promise-reject-errors": 0,
+    "prefer-rest-params": 0,
+    "prefer-spread": 0,
+    "prefer-template": 0,
+    "radix": 0,
+    "spaced-comment": 0,
+    "strict": 0
   }
 }
