--- a/package.json
+++ b/package.json
@@ -66,9 +66,11 @@
     "codecov": "3.7.1",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
-    "eslint": "6.8.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-flowtype": "5.1.2",
-    "eslint-plugin-jsdoc": "30.7.3",
+    "eslint-plugin-import": "^2.24.2",
     "express": "4.17.1",
     "gulp": "4.0.2",
     "gulp-babel": "8.0.0",
