--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,24 @@
 {
   "root": true,
-  "extends": [
-    "eslint:recommended", "airbnb-base", "prettier"
-  ],
+  "extends": ["eslint:recommended", "airbnb-base", "prettier"],
   "env": {
     "node": true,
     "es6": true
   },
   "parser": "babel-eslint",
-  "globals": { 
-    "wx": true 
+  "globals": {
+    "wx": true
   },
-  "plugins": [
-    "flowtype"
-  ],
+  "plugins": ["flowtype"],
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
   },
   "rules": {
-    "array-callback-return":0,
-    "arrow-body-style":0,
-    "camelcase": 0,
+    "arrow-body-style": 0,
     "class-methods-use-this": 0,
-    "consistent-return":0,
-    "default-case": 0,
-    "dot-notation": 0,
-    "eqeqeq":0,
+    "consistent-return": 0,
+    "eqeqeq": [2, "smart"],
     "func-names": 0,
     "global-require": 0,
     "guard-for-in": 0,
@@ -43,13 +35,10 @@
     "max-classes-per-file": 0,
     "new-cap": 0,
     "no-await-in-loop": 0,
-    "no-bitwise": 0,
-    "no-console": 0,
     "no-continue": 0,
-    "no-else-return": 0,
+    "no-console": 2,
     "no-extra-bind": 0,
     "no-lonely-if": 0,
-    "no-loop-func": 0,
     "no-multi-assign": 0,
     "no-new": 0,
     "no-param-reassign": 0,
@@ -63,22 +52,21 @@
     "no-shadow": 0,
     "no-throw-literal": 0,
     "no-underscore-dangle": 0,
-    "no-unneeded-ternary":0,
+    "no-unneeded-ternary": 0,
     "no-unused-vars": 0,
     "no-use-before-define": 0,
-    "no-useless-concat": 0,
-    "no-useless-constructor": 0,
-    "no-useless-escape": 0,
     "object-shorthand": 0,
-    "prefer-arrow-callback": 0,
-    "prefer-destructuring": 0,
-    "prefer-object-spread": 0,
+    "prefer-destructuring": [
+      2,
+      {
+        "array": false,
+        "object": true
+      }
+    ],
     "prefer-promise-reject-errors": 0,
     "prefer-rest-params": 0,
     "prefer-spread": 0,
-    "prefer-template": 0,
     "radix": 0,
-    "spaced-comment": 0,
-    "strict": 0
+    "no-inline-comments": 2
   }
 }
