--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "jsdoc-babel": "0.5.0",
     "metro-react-native-babel-preset": "0.59.0",
     "openapi-typescript": "^4.0.2",
-    "parse-server": "github:parse-community/parse-server#08b2ea45b0b499e83018bcaed498f7b043b2b027",
+    "parse-server": "git+https://git@github.com/parse-community/parse-server.git#08b2ea45b0b499e83018bcaed498f7b043b2b027",
     "prettier": "2.2.1",
     "regenerator-runtime": "0.13.5",
     "vinyl-source-stream": "2.0.0"
