--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/runtime": "7.12.5",
     "@babel/runtime-corejs3": "7.12.5",
     "@metamask/detect-provider": "^1.2.0",
+    "https": "^1.0.0",
     "react-native-crypto-js": "1.0.0",
     "uuid": "3.4.0",
     "web3": "^1.3.3",
