feat: seperate web3api into own import_path

--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "crypto-js": "4.0.0"
   },
   "scripts": {
-    "build": "npm run generate-types && node scripts/build_releases.js",
+    "build": "npm run generate-types && npm run generate-web3Api && node scripts/build_releases.js",
     "release": "node scripts/build_releases.js && npm publish",
     "test": "cross-env PARSE_BUILD=node jest",
     "lint": "eslint --cache src/ integration/",
@@ -113,6 +113,7 @@
     "format:check": "prettier --check .",
     "cross-env": "cross-env",
     "generate-types": "node scripts/generateWeb3ApiTypes",
+    "generate-web3Api": "node scripts/genWeb3API",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
