--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "gulp-derequire": "3.0.0",
     "gulp-insert": "0.5.0",
     "gulp-rename": "2.0.0",
-    "gulp-uglify": "3.0.2",
+    "gulp-terser": "^2.1.0",
     "gulp-watch": "5.0.1",
     "husky": "^7.0.0",
     "jasmine": "3.5.0",
@@ -124,10 +124,10 @@
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": [
+    "{src,integration}/**/*.js": [
       "eslint"
     ],
-    "*.{js,ts,html,css,md,json}": [
+    "src/**/*.{js,ts,html,css,md,json}": [
       "prettier --write"
     ]
   },
