commit generated files before pushing in pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,7 @@ deploy:
     - npm install
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
     - npm run release
+    - git add .
+    - git commit -m "new deployment"
     - git push
     - git push --tags
