--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ deploy:
     - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
     - npm version patch -m "Bump Version to %s [ci skip]"
     - npm install
+    - npm run build install
+    - git add .
+    - 'git commit -m "build: new deployment"'
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
     - npm run release
-    - git add .
-    - git commit -m "new deployment"
-    - git push
     - git push --tags
