--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,10 @@ deploy:
     - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
     - npm version patch -m "Bump Version to %s [ci skip]"
     - npm install
-    - npm run build install
+    - npm run build
     - git add .
     - 'git commit -m "build: new deployment"'
+    - git push
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
     - npm run release
     - git push --tags
