ci: fix lint staged and push

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ deploy:
     - npm version patch -m "Bump Version to %s [ci skip]"
     - npm install
     - npm run build
+    # Commit any new build files (ex. Web3Api)
     - git add .
-    - 'git commit -m "build: new deployment"'
-    - git push --no-verify
+    - 'git commit -m "build: new deployment" --no-verify'
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
     - npm run release
-    - git push --no-verify --tags
+    - git push --tags
