ci: fix pipeline [skip-ci]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,5 @@ deploy:
     - 'git commit -m "build: new deployment" --no-verify || echo "no build src changes, ignore commit failure"'
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
     - npm run release
+    - git push
     - git push --tags
