validate solana signature

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "@babel/runtime-corejs3": "7.12.5",
     "@metamask/detect-provider": "^1.2.0",
     "axios": "^0.23.0",
+    "buffer": "^6.0.3",
     "lint-staged": "^11.1.2",
     "react-native-crypto-js": "1.0.0",
+    "tweetnacl": "^1.0.3",
     "uuid": "3.4.0",
     "web3": "^1.6.0",
     "ws": "^7.4.6",
@@ -67,6 +69,8 @@
     "babel-plugin-inline-package-json": "2.0.0",
     "babel-plugin-minify-dead-code-elimination": "0.5.1",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
     "browserify": "16.5.1",
     "codecov": "3.7.1",
     "core-js": "3.6.5",
