--- a/package.json
+++ b/package.json
@@ -77,18 +77,18 @@
     "eslint-plugin-flowtype": "5.1.2",
     "eslint-plugin-import": "^2.24.2",
     "express": "4.17.1",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-babel": "8.0.0",
     "gulp-derequire": "3.0.0",
     "gulp-insert": "0.5.0",
     "gulp-rename": "2.0.0",
     "gulp-terser": "^2.1.0",
-    "gulp-watch": "5.0.1",
+    "gulp-watch": "^5.0.1",
     "husky": "^7.0.0",
     "jasmine": "3.5.0",
-    "jasmine-reporters": "2.3.2",
-    "jest": "24.9.0",
-    "jsdoc": "3.6.3",
+    "jasmine-reporters": "^2.5.0",
+    "jest": "^26.6.3",
+    "jsdoc": "^3.6.7",
     "jsdoc-babel": "0.5.0",
     "metro-react-native-babel-preset": "0.66.2",
     "openapi-typescript": "^4.0.2",
