--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@parse/minami": "1.0.0",
-    "babel-jest": "24.9.0",
+    "babel-jest": "^27.4.5",
     "babel-plugin-inline-package-json": "2.0.0",
     "babel-plugin-minify-dead-code-elimination": "0.5.1",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
@@ -87,7 +87,7 @@
     "husky": "^7.0.4",
     "jasmine": "^3.10.0",
     "jasmine-reporters": "^2.5.0",
-    "jest": "^26.6.3",
+    "jest": "^27.4.5",
     "jsdoc": "^3.6.7",
     "jsdoc-babel": "0.5.0",
     "metro-react-native-babel-preset": "0.66.2",
@@ -133,6 +133,8 @@
   },
   "jest": {
     "automock": true,
+    "testRunner": "jest-jasmine2",
+    "testEnvironment": "jsDom",
     "collectCoverage": true,
     "coveragePathIgnorePatterns": [
       "/node_modules/",
