--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/runtime": "^7.16.5",
     "@babel/runtime-corejs3": "^7.16.5",
     "@metamask/detect-provider": "^1.2.0",
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "lint-staged": "^12.1.2",
     "react-native-crypto-js": "1.0.0",
     "uuid": "^8.3.2",
@@ -67,7 +67,7 @@
     "babel-plugin-inline-package-json": "2.0.0",
     "babel-plugin-minify-dead-code-elimination": "0.5.1",
     "babel-plugin-transform-inline-environment-variables": "0.4.3",
-    "browserify": "16.5.1",
+    "browserify": "^17.0.0",
     "codecov": "^3.8.3",
     "core-js": "^3.20.0",
     "cross-env": "^7.0.3",
