--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "jasmine": "^3.10.0",
     "jasmine-reporters": "^2.5.0",
     "jest": "^27.4.5",
+    "jest-environment-jsdom": "^27.4.4",
     "jsdoc": "^3.6.7",
     "jsdoc-babel": "0.5.0",
     "metro-react-native-babel-preset": "0.66.2",
@@ -104,8 +105,8 @@
     "install:clean": "npm ci",
     "build": "node scripts/build_releases.js",
     "release": "npm publish",
-    "test": "cross-env PARSE_BUILD=node jest",
-    "test:ci": "cross-env PARSE_BUILD=node jest",
+    "test": "cross-env PARSE_BUILD=node NODE_ENV=test jest",
+    "test:ci": "cross-env PARSE_BUILD=node NODE_ENV=test jest",
     "lint": "eslint --cache src/ integration/",
     "lint:ci": "eslint --output-file eslint_report.json --format json src/ integration/",
     "lint:fix": "eslint --fix --cache src/ integration/",
@@ -134,7 +135,7 @@
   "jest": {
     "automock": true,
     "testRunner": "jest-jasmine2",
-    "testEnvironment": "jsDom",
+    "testEnvironment": "jest-environment-jsdom",
     "collectCoverage": true,
     "coveragePathIgnorePatterns": [
       "/node_modules/",
