--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,27 @@
-deploy:
-  stage: deploy
+stages:
+  - run
+  - deploy
+
+run:
+  stage: run
   only:
-    refs:
-      - main
-    changes:
-      - src/*
+    - feature/bump-if-changes
   tags:
     - moralis-runner
   script:
     - cd /home/gitlab-runner && rm -rf Moralis-JS-SDK
     - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
+
+deploy:
+  stage: deploy
+  only:
+    refs:
+      - feature/bump-if-changes
+    changes:
+      - src/*
+  tags:
+    - moralis-runner
+  script:
     - npm version patch -m "Bump Version to %s [ci skip]"
     - npm install
     - npm run build
@@ -17,6 +29,6 @@ deploy:
     - git add .
     - 'git commit -m "build: new deployment [ci skip]" --no-verify || echo "no build src changes, ignore commit failure"'
     - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
-    # - npm run release
-    # - git push
-    # - git push --tags
+    - npm run release
+    - git push
+    - git push --tags
