add paths to watch changes for

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,9 @@ deploy:
     refs:
       - feature/bump-if-changes
     changes:
-      - src/*
+      paths:
+        - '^src/'
+        - '^types/'
   tags:
     - moralis-runner
   script:
