--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,8 @@ deploy:
     refs:
       - feature/bump-if-changes
     changes:
-      - paths:
-        - '^src/'
-        - '^types/'
+      - src/*
+      - types/*
   tags:
     - moralis-runner
   script:
