ci: use semantic-release for publishing

--- a/package.json
+++ b/package.json
@@ -63,6 +63,12 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
     "@parse/minami": "1.0.0",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.2",
+    "@semantic-release/npm": "^8.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "babel-jest": "^27.4.5",
     "babel-plugin-inline-package-json": "2.0.0",
     "babel-plugin-minify-dead-code-elimination": "0.5.1",
@@ -96,6 +102,7 @@
     "parse-server": "git+https://git@github.com/parse-community/parse-server.git#alpha",
     "prettier": "^2.5.1",
     "regenerator-runtime": "^0.13.9",
+    "semantic-release": "^18.0.1",
     "vinyl-source-stream": "2.0.0"
   },
   "optionalDependencies": {
