--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+# Publish on new commits on main branch
 deploy:
   stage: deploy
   only:
@@ -7,13 +8,24 @@ deploy:
   script:
     - cd /home/gitlab-runner && rm -rf Moralis-JS-SDK
     - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
-    - npm version patch -m "Bump Version to %s [ci skip]"
     - npm install
     - npm run build
-    # Commit any new build files (ex. Web3Api)
     - git add .
     - 'git commit -m "build: new deployment [ci skip]" --no-verify || echo "no build src changes, ignore commit failure"'
-    - echo //registry.npmjs.org/:_authToken="$NPM_TOKEN" > .npmrc
-    - npm run release
-    - git push
-    - git push --tags
+    - npx semantic-release
+
+# Publish on new commits on beta branch
+beta-deploy:
+  stage: deploy
+  only:
+    - beta
+  tags:
+    - moralis-runner
+  script:
+    - cd /home/gitlab-runner && rm -rf Moralis-JS-SDK
+    - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
+    - npm install
+    - npm run build
+    - git add .
+    - 'git commit -m "build: new deployment [ci skip]" --no-verify || echo "no build src changes, ignore commit failure"'
+    - npx semantic-release
