--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,8 @@
-# Publish on new commits on main branch
+# Publish on new commits on main and beta branch
 deploy:
   stage: deploy
   only:
     - main
-  tags:
-    - moralis-runner
-  script:
-    - cd /home/gitlab-runner && rm -rf Moralis-JS-SDK
-    - git clone git@github.com:MoralisWeb3/Moralis-JS-SDK.git && cd Moralis-JS-SDK
-    - npm install
-    - npm run build
-    - git add .
-    - 'git commit -m "build: new deployment [ci skip]" --no-verify || echo "no build src changes, ignore commit failure"'
-    - npx semantic-release
-
-# Publish on new commits on beta branch
-beta-deploy:
-  stage: deploy
-  only:
     - beta
   tags:
     - moralis-runner
@@ -28,4 +13,5 @@ beta-deploy:
     - npm run build
     - git add .
     - 'git commit -m "build: new deployment [ci skip]" --no-verify || echo "no build src changes, ignore commit failure"'
+    - git push
     - npx semantic-release
