--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MoralisWeb3/Moralis-JS-SDK"
+    "url": "git+https://github.com/MoralisWeb3/Moralis-JS-SDK.git"
   },
   "bugs": "https://github.com/MoralisWeb3/issue-tracker/issues",
   "typings": "types",
