ci: run github actions on beta

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,11 @@ on:
   pull_request:
     branches:
       - main
+      - beta
   push:
     branches:
       - main
+      - beta
 jobs:
   setup:
     name: Build dependencies
