--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@babel/runtime": "7.16.5",
     "@babel/runtime-corejs3": "7.16.5",
+    "@metamask/detect-provider": "^1.2.0",
     "axios": "0.24.0",
     "ethers": "5.5.1",
     "react-native-crypto-js": "1.0.0",
