ci: update dependabot prefix for non dev deps

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,5 +7,9 @@ updates:
     # Check the npm registry for updates every day (weekdays)
     schedule:
       interval: 'weekly'
+    commit-message:
+      prefix: fix
+      prefix-development: chore
+      include: scope
     reviewers:
       - 'MoralisWeb3/js-sdk-tean'
