--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "format:check": "prettier --check .",
     "cross-env": "cross-env",
     "generate-web3Api": "node scripts/genWeb3API && node scripts/generateWeb3ApiTypes",
+    "generate-solanaApi": "node scripts/genSolanaAPI && node scripts/generateSolanaApiTypes",
     "prepare": "husky install",
     "pre-commit": "lint-staged"
   },
