--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "axios": "0.24.0",
     "ethers": "5.5.3",
+    "magic-sdk": "^8.0.1",
     "react-native-crypto-js": "1.0.0",
     "uuid": "^8.3.2",
     "ws": "^8.3.0",
