--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "moralis-lobus",
-  "version": "1.1.5",
+  "name": "moralis",
+  "version": "1.5.5",
   "description": "The Moralis JavaScript SDK",
   "homepage": "https://docs.moralis.io",
   "keywords": [
@@ -11,7 +11,7 @@
   "license": "BSD-3-Clause",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kallinlobus/Moralis-JS-SDK.git"
+    "url": "git+https://github.com/MoralisWeb3/Moralis-JS-SDK.git"
   },
   "bugs": "https://github.com/MoralisWeb3/issue-tracker/issues",
   "typings": "types",
