--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@babel/preset-typescript": "^7.16.7",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -15,8 +14,7 @@
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
     "add": "^2.0.6",
-    "esbuild": "^0.14.21",
-    "esbuild-jest": "^0.5.0",
+    "esbuild": "0.14.37",
     "jest": "^27.4.7",
     "rollup": "^2.66.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -43,5 +41,7 @@
       "packages/solConnectors/*"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "esbuild-jest": "^0.5.0"
+  }
 }
