--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "skipLibCheck": true,
     "outDir": "./lib",
     "baseUrl": ".",
     "composite": true,
