--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,12 +20,14 @@
   "devDependencies": {
     "eslint": "^8.7.0",
     "prettier": "^2.5.1",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@ethersproject/address": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/units": "^5.6.0",
+    "@xstate/fsm": "^2.0.0",
     "ky": "^0.30.0",
     "ky-universal": "^0.10.1"
   }
