--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -15,20 +15,23 @@
     "lint": "eslint .",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "gen:contracts": "rm -rf src/Contract/generated && typechain --target=ethers-v5 --out-dir=src/Contract/generated 'src/Contract/abis/*.json' "
   },
   "devDependencies": {
+    "@typechain/ethers-v5": "^10.0.0",
     "eslint": "^8.11.0",
+    "jest": "^28.0.3",
     "prettier": "^2.5.1",
+    "typechain": "^8.0.0",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@moralis/core": "^1.0.0",
     "@moralis/evm-connector-utils": "^1.0.0",
+    "@moralis/evm-metamask-connector": "^1.0.0",
     "ethers": "^5.6.2",
-    "jest": "^27.4.7",
-    "parse": "^3.4.1",
-    "xstate": "4.30.6",
-    "yup": "^0.32.11"
+    "parse": "^3.4.1"
   }
 }
