--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -31,7 +31,6 @@
     "@moralis/core": "^1.0.0",
     "@moralis/evm-connector-utils": "^1.0.0",
     "@moralis/evm-metamask-connector": "^1.0.0",
-    "ethers": "^5.6.2",
-    "parse": "^3.4.1"
+    "ethers": "^5.6.2"
   }
 }
