--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,13 +21,12 @@
     "@types/parse": "^2.18.13",
     "eslint": "^8.7.0",
     "prettier": "^2.5.1",
+    "typed-emitter": "^2.1.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "@moralis/core": "^1.0.0",
-    "@moralis/utils": "^1.0.0",
     "jest": "^27.4.7",
-    "xstate": "^4.30.1",
-    "yup": "^0.32.11"
+    "parse": "^3.4.1"
   }
 }
