--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^27.4.0",
     "add": "^2.0.6",
     "esbuild": "0.14.37",
+    "esbuild-jest": "^0.5.0",
     "jest": "^27.4.7",
     "rollup": "^2.66.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -41,7 +42,5 @@
       "packages/solConnectors/*"
     ]
   },
-  "dependencies": {
-    "esbuild-jest": "^0.5.0"
-  }
+  "dependencies": {}
 }
