--- a/packages/evmConnectors/EvmWalletconnectConnector/package.json
+++ b/packages/evmConnectors/EvmWalletconnectConnector/package.json
@@ -8,8 +8,9 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "format": "prettier . -write",
-    "lint": "eslint .",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "tsc",
     "dev": "tsc --watch"
@@ -23,7 +24,6 @@
   "dependencies": {
     "@moralis/core": "^1.0.0",
     "@moralis/evm-connector-utils": "^1.0.0",
-    "@moralis/utils": "^1.0.0",
     "@walletconnect/web3-provider": "^1.7.5"
   }
 }
