--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@semantic-release/changelog": "^6.0.1",
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^8.0.4",
+    "@semantic-release/npm": "^9.0.1",
+    "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/eslint": "^8.4.1",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
@@ -20,6 +26,7 @@
     "rollup": "^2.66.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.31.1",
+    "semantic-release": "^19.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
     "turbo": "^1.2.4",
@@ -30,10 +37,13 @@
     "build": "yarn turbo run build --filter=!@moralis/test-app-all",
     "dev": "yarn turbo run dev --parallel",
     "test": "turbo run test  --filter=!@moralis/test-app-all",
+    "lint": "turbo run lint  --filter=!@moralis/test-app-all",
     "clean": "yarn turbo run clean  --parallel",
     "test:watch": "yarn turbo run test:watch --parallel",
     "test:coverage": "yarn turbo run test:coverage --parallel",
-    "test:ci": "CI=true jest"
+    "test:ci": "CI=true jest",
+    "format": "yarn turbo run format --filter=!@moralis/test-app-all",
+    "format:check": "yarn turbo run format:check --filter=!@moralis/test-app-all"
   },
   "workspaces": {
     "packages": [
