--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
     "add": "^2.0.6",
-    "esbuild": "0.14.37",
-    "esbuild-jest": "^0.5.0",
-    "jest": "^27.4.7",
+    "cross-env": "^7.0.3",
+    "jest": "28",
+    "msw": "^0.40.1",
     "rollup": "^2.66.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.31.1",
     "semantic-release": "^19.0.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.2",
     "tslib": "^2.3.1",
     "turbo": "^1.2.4",
     "typescript": "^4.5.5",
