--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -9,7 +9,7 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules yarn jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules yarn jest --runInBand --no-cache --detectOpenHandles --forceExit",
     "test:old": "yarn jest",
     "test:watch": "yarn jest --watch",
     "test:coverage": "yarn jest --coverage",
