--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
     "add": "^2.0.6",
-    "jest": "^27.4.7",
+    "cross-env": "^7.0.3",
+    "jest": "28",
+    "msw": "^0.41.0",
     "nx": "14.1.7",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
   },
