--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -8,9 +8,9 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "format": "prettier . --write",
+    "format": "prettier . '**/*.+(js|ts|json)' --write",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "format:check": "prettier . --check",
+    "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
     "build": "tsc",
     "gen:types": "openapi-typescript https://deep-index.moralis.io/api-docs/v2/swagger.json --output src/generated/types.ts",
