--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "test": "yarn jest",
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit",
     "test:ci": "yarn test --ci",
     "test:coverage": "yarn run test --coverage",
     "test:watch": "yarn run test --watch",
