test(evmApi): getTokenPrice (#393)
* test(evmmApi): testing get token price

* test(evmApi): fixing the mock endpoints and test in evmApi

* test: fix moralisweb3 import

* test: run jest with ci option enabled

* chore: remove unused dependency

* ci: use node 16

* ci: update jest scripts

* ci: remove test running from ci

Co-authored-by: Chidimma Ifeh <chidimmaifeh@Chidimmas-MacBook-Pro.local>
Co-authored-by: Erno <erno@ivan.academy>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,8 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "test": "yarn jest",
+    "test": "yarn jest --runInBand --detectOpenHandles --forceExit",
+    "test:ci": "yarn test --ci",
     "test:coverage": "yarn run test --coverage",
     "test:watch": "yarn run test --watch",
     "format": "prettier . '**/*.+(js|ts|json)' --write",
