--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/eslint": "^8.4.1",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
@@ -17,6 +20,12 @@
     "jest": "28",
     "msw": "^0.41.0",
     "nx": "14.1.7",
+    "rollup": "^2.75.3",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.31.2",
     "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
