--- a/packages/evmConnectors/EvmWalletconnectConnector/package.json
+++ b/packages/evmConnectors/EvmWalletconnectConnector/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "private": true,
   "main": "./lib/index.js",
-  "module": "./lib.esm/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
@@ -13,7 +12,7 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "rollup -c",
+    "build": "tsc",
     "dev": "tsc --watch"
   },
   "devDependencies": {
