--- a/packages/evmConnectors/EvmWalletconnectConnector/package.json
+++ b/packages/evmConnectors/EvmWalletconnectConnector/package.json
@@ -7,6 +7,10 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib",
+    "dist"
+  ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
