--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/eslint": "^8.4.1",
     "@types/estree": "^0.0.51",
     "@types/jest": "^27.4.0",
@@ -32,6 +34,7 @@
   },
   "scripts": {
     "build": "yarn nx run-many --target=build --all --exclude=@morlaisweb3/test-app-all",
+    "build:manual": "yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
     "lint": "yarn nx run-many --target=lint --all",
     "clean": "yarn nx run-many --target=clean --all",
