--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
+  "module": "./lib/index.es.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "test": "echo 'not implemented'",
     "test:coverage": "yarn run test --coverage",
@@ -15,7 +19,7 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
+    "build": "rollup -c rollup.config.js",
     "dev": "tsc --watch",
     "gen:contracts": "rm -rf src/Contract/generated && typechain --target=ethers-v5 --out-dir=src/Contract/generated 'src/Contract/abis/*.json' "
   },
