--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -5,14 +5,18 @@
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
+  "module": "./lib/index.es.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
+    "build": "rollup -c rollup.config.js",
     "gen:types": "openapi-typescript https://deep-index.moralis.io/api-docs/v2/swagger.json --output src/generated/types.ts",
     "dev": "tsc --watch"
   },
