--- a/packages/evm/package.json
+++ b/packages/evm/package.json
@@ -19,8 +19,8 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "rollup -c rollup.config.js",
-    "dev": "tsc --watch",
+    "build": "rollup -c",
+    "dev": "rollup -c --watch",
     "gen:contracts": "rm -rf src/Contract/generated && typechain --target=ethers-v5 --out-dir=src/Contract/generated 'src/Contract/abis/*.json' "
   },
   "devDependencies": {
