--- a/packages/evmConnectors/EvmWalletconnectConnector/package.json
+++ b/packages/evmConnectors/EvmWalletconnectConnector/package.json
@@ -16,11 +16,11 @@
     "format:check": "prettier . '**/*.+(js|ts|json)' --check",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf lib.esm && rm -rf tsconfig.tsbuildinfo",
-    "build": "tsc",
-    "dev": "tsc --watch"
+    "build": "rollup -c",
+    "dev": "rollup -c --watch"
   },
   "devDependencies": {
-    "@walletconnect/types": "^1.7.5",
+    "@walletconnect/types": "^1.7.8",
     "eslint": "^8.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
@@ -28,6 +28,6 @@
   "dependencies": {
     "@moralisweb3/core": "^2.0.0-alpha.1",
     "@moralisweb3/evm-connector-utils": "^2.0.0-alpha.1",
-    "@walletconnect/web3-provider": "^1.7.5"
+    "@walletconnect/web3-provider": "^1.7.8"
   }
 }
