--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^28.0.3",
     "typescript": "^4.5.5",
     "yarn": "^1.22.17"
