--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
-  "module": "./lib/index.es.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "scripts": {
     "test": "yarn jest --runInBand --detectOpenHandles --forceExit",
@@ -33,8 +33,10 @@
     "@ethersproject/address": "^5.6.0",
     "@ethersproject/bignumber": "^5.6.0",
     "@ethersproject/units": "^5.6.0",
+    "@ethersproject/transactions": "^5.6.0",
     "@xstate/fsm": "^2.0.0",
     "ky": "^0.30.0",
-    "ky-universal": "^0.10.1"
+    "ky-universal": "^0.10.1",
+    "eventemitter3": "^4.0.7"
   }
 }
