--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
-  "module": "./lib/index.es.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "scripts": {
     "format": "prettier . '**/*.+(js|ts|json)' --write",
@@ -27,6 +27,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.0.0-alpha.1"
+    "@moralisweb3/core": "^2.0.0-alpha.1",
+    "ethers": "^5.6.2"
   }
 }
