--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "files": [
-    "lib"
+    "lib",
+    "dist"
   ],
   "scripts": {
     "test": "echo 'not implemented'",
